<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_display"
        style="@style/calcTextView"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_zero"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="horizontal"
        android:padding="@dimen/calculator_keypad_padding">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_green"
                android:text="@string/button_7"
                android:textSize="@dimen/calculator_button_text_size"/>

            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_red"
                android:text="@string/button_4"
                android:textSize="@dimen/calculator_button_text_size"/>

            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_orange"
                android:text="@string/button_1"
                android:textSize="@dimen/calculator_button_text_size"/>

            <Button
                android:id="@+id/button_decimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_purple"
                android:text="@string/button_decimal"
                android:textSize="@dimen/calculator_button_text_size"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_yellow"
                android:text="@string/button_8"
                android:textSize="@dimen/calculator_button_text_size"/>

            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_purple"
                android:text="@string/button_5"
                android:textSize="@dimen/calculator_button_text_size"/>

            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_blue"
                android:text="@string/button_2"
                android:textSize="@dimen/calculator_button_text_size"/>

            <Button
                android:id="@+id/button_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_green"
                android:text="@string/button_zero"
                android:textSize="@dimen/calculator_button_text_size"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_blue"
                android:text="@string/button_9"
                android:textSize="@dimen/calculator_button_text_size"/>

            <Button
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_green"
                android:text="@string/button_6"
                android:textSize="@dimen/calculator_button_text_size"/>

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_red"
                android:text="@string/button_3"
                android:textSize="@dimen/calculator_button_text_size"/>

            <Button
                android:id="@+id/button_equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_purple"
                android:text="@string/button_equals"
                android:textSize="@dimen/calculator_button_text_size"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_red"
                android:text="@string/button_delete"
                android:textSize="@dimen/calculator_button_text_size_delete"/>

            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_purple"
                android:text="@string/button_plus"
                android:textSize="@dimen/calculator_button_text_size"/>

            <Button
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_blue"
                android:text="@string/button_minus"
                android:textSize="@dimen/calculator_button_text_size"/>

            <Button
                android:id="@+id/button_multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_green"
                android:text="@string/button_multiply"
                android:textSize="@dimen/calculator_button_text_size"/>

            <Button
                android:id="@+id/button_divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_yellow"
                android:text="@string/button_divide"
                android:textSize="@dimen/calculator_button_text_size"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
